--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-datepicker": "^2.11.0",
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
-    "firebase": "^6.0.2",
+    "firebase": "^7.12.0",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
     "react": "^16.8.6",
     "react-cropper": "^1.2.0",
-    "react-datepicker": "2.5.0",
+    "react-datepicker": "^2.9.3",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-infinite-scroller": "^1.2.4",
