--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@types/react-datepicker": "^2.11.0",
+    "axios": "^0.19.2",
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
     "firebase": "^7.12.0",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^13.0.0",
     "react-cropper": "^1.2.0",
     "react-datepicker": "^2.9.3",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-google-maps": "^9.4.5",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.5.0",
     "react-places-autocomplete": "^7.2.1",
