--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.5.0",
     "react-places-autocomplete": "^7.2.1",
+    "react-quill": "^1.3.5",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
     "react-redux-toastr": "^7.5.1",
