--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "axios": "^0.19.2",
     "cuid": "^2.1.6",
     "date-fns": "^2.0.0-alpha.27",
-    "firebase": "^7.12.0",
+    "firebase": "^7.14.6",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
     "react": "^16.8.6",
@@ -18,6 +18,7 @@
     "react-dropzone": "^10.1.5",
     "react-google-maps": "^9.4.5",
     "react-infinite-scroller": "^1.2.4",
+    "react-input-range": "^1.3.0",
     "react-lazyload": "^2.5.0",
     "react-places-autocomplete": "^7.2.1",
     "react-quill": "^1.3.5",
@@ -32,7 +33,8 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
