--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
+    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-auth-wrapper": "^2.1.0",
     "redux-firestore": "^0.3.2",
