--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^7.14.6",
     "google-map-react": "^1.1.4",
     "moment": "^2.22.0",
+    "node-sass": "4.14.1",
     "nodemailer": "^6.4.10",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^13.0.0",
